--- a/src/index.css
+++ b/src/index.css
@@ -34,7 +34,7 @@ body {
 }
 
 .filterObjectPB {
-  height: 390px
+  height: 500px
 }
 
 .filterStringPB {
@@ -63,7 +63,8 @@ body {
 }
 
 .filterObjectRB {
-  height: 95px;
+  height: 180px;
+  word-wrap: break-word;
 }
 
 .filterStringRB {
